# emulator_chip8

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  chip8.rs  lib.rs  main.rs  processor.rs  window.rs
src/chip8/: audio.rs  mod.rs  processor.rs  window.rs
