[package]
name = "emulator_chip8"
version = "0.1.0"
edition = "2021"
author = ["robert azzopardi"]

# See more keys and their defnewions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["mixer"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
